--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "next build",
+    "deploy": "sls deploy"
   },
   "dependencies": {
     "next": "14.2.4",
@@ -22,6 +24,8 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "sass": "^1.77.6",
+    "serverless": "^4.1.5",
+    "serverless-lift": "^1.29",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
