--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
@@ -23,7 +24,6 @@
     "eslint": "^9.32.0",
     "eslint-config-next": "15.4.5",
     "postcss": "^8.5.6",
-    "sass": "^1.89.2",
     "serverless": "^4.17.2",
     "serverless-lift": "^1.31.0",
     "tailwindcss": "^4.1.11",
